# ArmUs

./: .gitignore  LICENSE  README.md  motor_calib.yaml
Mechanics/: BOM.txt  P2_nouvelle_manche.SLDPRT  README.md  StatiqueAnalysis.txt  (+8 more)
arm_us/: CMakeLists.txt  README.md  package.xml
arm_us/MotionGenesis/: DirectKinematics.txt  InverseKinematics.txt
arm_us/config/: controller_config.yaml  controller_config_old.yaml  controller_config_phil.yaml  joint_limit.yaml  motor_config.yaml  rviz_config.rviz
arm_us/doc/: manifest.yaml
arm_us/doc/html/: ArmUs_8cpp.html  ArmUs_8cpp__incl.map  ArmUs_8cpp__incl.md5  ArmUs_8cpp_source.html  ArmUs_8hpp.html  ArmUs_8hpp__dep__incl.map  ArmUs_8hpp__dep__incl.md5  ArmUs_8hpp__incl.map  ArmUs_8hpp__incl.md5  ArmUs_8hpp_source.html  ArmUs__Controller_8cpp.html  ArmUs__Controller_8cpp__incl.map  ArmUs__Controller_8cpp__incl.md5  ArmUs__Controller_8cpp_source.html  ArmUs__Controller_8hpp.html  ArmUs__Controller_8hpp__dep__incl.map  ArmUs__Controller_8hpp__dep__incl.md5  ArmUs__Controller_8hpp_source.html  ArmUs__Info_8cpp.html  ArmUs__Info_8cpp__incl.map  ArmUs__Info_8cpp__incl.md5  ArmUs__Info_8cpp_source.html  ArmUs__Info_8hpp.html  ArmUs__Info_8hpp__dep__incl.map  ArmUs__Info_8hpp__dep__incl.md5  ArmUs__Info_8hpp__incl.map  ArmUs__Info_8hpp__incl.md5  ArmUs__Info_8hpp_source.html  annotated.html  classArmUs-members.html  classArmUs.html  classArmUsInfo-members.html  classArmUsInfo.html  classArmUsInfoReal-members.html  classArmUsInfoReal.html  classArmUsInfoReal__inherit__graph.map  classArmUsInfoReal__inherit__graph.md5  classArmUsInfoSimul-members.html  classArmUsInfoSimul.html  classArmUsInfoSimul__inherit__graph.map  (+106 more)
arm_us/doc/html/msg/: GraphInfo.html  GuiFeedback.html  GuiInfo.html
arm_us/launch/: 1_interface.launch  2_control.launch  arm_us.launch  master_launch.launch  motor_controller.launch  motor_controller_launch.launch  sleeve.launch  translator.launch
arm_us/launch/OLD/: motor_controller.OLD  translator.OLD
arm_us/librairies/ArmUs/: ArmUs.cpp  ArmUs.hpp  CMakeLists.txt
arm_us/librairies/ArmUs_Controller/: ArmUs_Controller.cpp  ArmUs_Controller.hpp
arm_us/librairies/ArmUs_Info/: ArmUs_Info.cpp  ArmUs_Info.hpp  CMakeLists.txt
arm_us/libraries/ArmUs/: ArmUs.cpp  ArmUs.hpp  CMakeLists.txt
arm_us/libraries/ArmUs_Controller/: ArmUs_Controller.cpp  ArmUs_Controller.hpp  CMakeLists.txt
arm_us/libraries/ArmUs_Info/: ArmUs_Info.cpp  ArmUs_Info.hpp
arm_us/model/: Arm_Joint.dae  rviz_config.rviz
arm_us/msg/: GraphInfo.msg  GuiFeedback.msg  GuiInfo.msg  MotorControl.msg
arm_us/perspectives/: dashboard.perspective
arm_us/src/: accel_plot_view.py  inv_kin_calc_service.py  master_node.cpp  motor_translator.cpp  rviz_sleeve.cpp
arm_us/srv/: InverseKinematicCalc.srv
arm_us_graph/: CMakeLists.txt  package.xml
arm_us_graph/doc/: manifest.yaml
arm_us_graph/doc/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  graph_8cpp.html  graph_8cpp__incl.map  graph_8cpp__incl.md5  graph_8cpp_source.html  graph_legend.html  index-msg.html  index.html  structArm-members.html  structArm.html  structVector3-members.html  structVector3.html
arm_us_graph/src/: arm_us_graph.cpp  basic_shapes.cpp  graph.cpp
arm_us_msg/: CMakeLists.txt  package.xml
arm_us_msg/doc/: manifest.yaml
arm_us_msg/doc/html/: graph_legend.html  index-msg.html  index.html
arm_us_msg/doc/html/msg/: GraphInfo.html  GuiInfo.html  JointLimits.html
arm_us_msg/doc/html/srv/: InverseKinematicCalc.html
arm_us_msg/msg/: GraphInfo.msg  GuiInfo.msg  JointLimits.msg
arm_us_msg/srv/: InverseKinematicCalc.srv
gui_arm_us/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
gui_arm_us/doc/: manifest.yaml
gui_arm_us/doc/html/: ____init_____8py.html  ____init_____8py_source.html  annotated.html  classes.html  classgui__arm__us_1_1gui__arm__us__plugin_1_1GuiArmUsPlugin-members.html  classgui__arm__us_1_1gui__arm__us__plugin_1_1GuiArmUsPlugin.html  classgui__arm__us_1_1gui__arm__us__plugin_1_1GuiArmUsPlugin__inherit__graph.map  classgui__arm__us_1_1gui__arm__us__plugin_1_1GuiArmUsPlugin__inherit__graph.md5  classgui__arm__us_1_1gui__arm__us__widget_1_1GuiArmUsWidget-members.html  classgui__arm__us_1_1gui__arm__us__widget_1_1GuiArmUsWidget.html  classgui__arm__us_1_1gui__arm__us__widget_1_1GuiArmUsWidget__inherit__graph.map  classgui__arm__us_1_1gui__arm__us__widget_1_1GuiArmUsWidget__inherit__graph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9b8942a9a2779183c04f6b56e5912459.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  gui__arm__us__plugin_8py.html  gui__arm__us__plugin_8py_source.html  gui__arm__us__widget_8py.html  gui__arm__us__widget_8py_source.html  hierarchy.html  index-msg.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  namespacegui__arm__us.html  namespacegui__arm__us_1_1gui__arm__us__plugin.html  namespacegui__arm__us_1_1gui__arm__us__widget.html  namespacemembers.html  namespacemembers_vars.html  namespaces.html  namespacesetup.html  setup_8py.html  setup_8py_source.html
gui_arm_us/launch/: standalone.launch  ui.launch
gui_arm_us/resource/: gui_arm_us.ui
gui_arm_us/scripts/: gui_arm_us
gui_arm_us/src/gui_arm_us/: gui_arm_us_plugin.py  gui_arm_us_widget.py
(+247 files in other folders)
