<?xml version="1.0"?>
<package format="2">
  <name>arm_us</name>
  <version>0.0.0</version>
  <description>The arm_us package, utilize all other arm_us packages to control and interface a 5 joints robotic arm </description>

  <maintainer email="micp1402@usherbrooke.ca">Philippe </maintainer>
  <maintainer email="stam1001@usherbrooke.ca">Mikael </maintainer>

  <license>MIT</license>

  <author email="micp1402@usherbrooke.ca">Philippe</author>
  <author email="stam1001@usherbrooke.ca">Mikael </author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>arm_us_msg</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>arm_us_msg</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>arm_us_msg</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <cpp cflags="-I${prefix}/msg/cpp"/>
  </export>
</package>
