<?xml version="1.0"?>
<package format="2">
  <name>arm_us_msg</name>
  <version>0.0.0</version>
  <description>The arm_us_msg package contain all the msgs, srv and action files used by arm_us's
  packages. They are precompiled in another package as per ROS guidlines</description>

  <maintainer email="micp1402@usherbrooke.ca">Philippe </maintainer>
  <maintainer email="stam1001@usherbrooke.ca">Mikael </maintainer>

  <license>MIT</license>

  <author email="micp1402@usherbrooke.ca">Philippe</author>
  <author email="stam1001@usherbrooke.ca">Mikael </author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
