<?xml version="1.0"?>
<package format="2">
  <name>gui_arm_us</name>
  <version>0.0.0</version>
  <description>The gui_arm_us package is a qt based rqt plugin. The user can see ArmUs real time info and calibrate the robot</description>

  <maintainer email="micp1402@usherbrooke.ca">Philippe </maintainer>
  <maintainer email="stam1001@usherbrooke.ca">Mikael </maintainer>

  <license>MIT</license>

  <author email="micp1402@usherbrooke.ca">Philippe</author>
  <author email="stam1001@usherbrooke.ca">Mikael </author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  <rqt_gui plugin="${prefix}/plugin.xml"/>

  </export>
</package>
